@@ -3,6 +3,7 @@
 	* Added feature #2474: htmlArea RTE: Add general element properties editing dialogue
 	* Fixed bug #16431: htmlArea RTE: in WebKit, clicking on image does not select it
 	* Follow-up to feature #2474: htmlArea RTE: Add general element properties editing dialogue
+	* Fixed bug #16433: htmlArea RTE: Default action not prevented on click in status bar
 
 2010-11-16  Jeff Segars  <jeff@webempoweredchurch.org>
 
